# BookClub

./: Book.cpp  Book.h  BookClub.cpp  BookClub.h  CMakeLists.txt  Control.cpp  Control.h  DynamicListofMembers.cpp  DynamicListofMembers.h  LinkedList.cpp  LinkedList.h  Makefile  Member.cpp  Member.h  Ratings.cpp  Ratings.h  StaticListofRatings.cpp  StaticListofRatings.h  View.cpp  View.h  main.cpp
